--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <div class="main-content">
                 <section class="input-section">
                     <h2>Bengali Text Emotion Analysis</h2>
-                    <p class="description">Enter Bengali text to analyze emotions using our ensemble of transformer models</p>
+                    <p class="description">
+                      This app uses an advanced ensemble of transformer models—combining the strengths of multiple state-of-the-art Bengali language models. By leveraging weighted soft voting, the ensemble delivers more accurate and robust emotion detection than any single model alone. This approach ensures nuanced understanding and reliable results for your Bengali text inputs.
+                    </p>
 
                     <div class="input-area">
                         <textarea 
